--- a/pom.xml
+++ b/pom.xml
@@ -144,7 +144,100 @@
                         </execution>
                     </executions>
                 </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-checkstyle-plugin</artifactId>
+                    <version>3.1.0</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>com.puppycrawl.tools</groupId>
+                            <artifactId>checkstyle</artifactId>
+                            <version>8.29</version>
+                        </dependency>
+                    </dependencies>
+                    <executions>
+                        <execution>
+                            <phase>compile</phase>
+                            <id>auto-checkstyle</id>
+                            <goals>
+                                <goal>checkstyle</goal>
+                                <goal>check</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <configLocation>build/checkstyle.xml</configLocation>
+<!--                        <suppressionsLocation>build/suppressions.xml</suppressionsLocation>-->
+                        <logViolationsToConsole>true</logViolationsToConsole>
+                        <consoleOutput>true</consoleOutput>
+                        <linkXRef>false</linkXRef>
+                    </configuration>
+                </plugin>
                 <!-- AUTO REMOVE CLASS FOR NO USE -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>2.4.3</version>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>shade</goal>
+                            </goals>
+                            <configuration>
+                                <minimizeJar>true</minimizeJar>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>0.8.3</version>
+                    <configuration>
+                        <rules>
+                            <rule>
+                                <element>BUNDLE</element>
+                                <limits>
+                                    <!-- 指定方法覆蓋到50% -->
+<!--                                    <limit implementation="org.jacoco.report.check.Limit">-->
+<!--                                        <counter>METHOD</counter>-->
+<!--                                        <value>COVEREDRATIO</value>-->
+<!--                                        <minimum>0.50</minimum>-->
+<!--                                    </limit>-->
+                                    <!-- 指定分支覆蓋到50% -->
+<!--                                    <limit implementation="org.jacoco.report.check.Limit">-->
+<!--                                        <counter>BRANCH</counter>-->
+<!--                                        <value>COVEREDRATIO</value>-->
+<!--                                        <minimum>0.50</minimum>-->
+<!--                                    </limit>-->
+                                    <!-- 指定類覆蓋到100%，不能遺失任何類 -->
+                                    <limit implementation="org.jacoco.report.check.Limit">
+                                        <counter>COMPLEXITY</counter>
+                                        <value>COVEREDRATIO</value>
+                                        <minimum>0.40</minimum>
+                                    </limit>
+                                </limits>
+                            </rule>
+                        </rules>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>pre-test</id>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>post-test</id>
+                            <phase>test</phase>
+                            <goals>
+                                <goal>report</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
     </build>
 
